[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verify-everything"
version = "0.2.4"
description = "LLM-based code review tool that finds issues tests and linters miss"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
keywords = ["code-review", "llm", "verification", "linting", "ai", "git", "diff"]
authors = [
    { name = "Imbue" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    # Original vet dependencies
    "jinja2",
    "loguru",
    "pydantic>=2.11.4",

    # From imbue_core
    "anyio",
    "attrs",
    "cachetools",
    "cattrs",
    "diskcache>=5.6.3",
    "httpx",
    "pathspec",
    "pygit2>=1.18.0",
    "pyhumps",
    "tblib==2.0.0",
    "toml",
    "typeid-python",
    "yasoo",
    "anthropic~=0.54",
    "openai>=1.79.0",
    "tiktoken",
    "google-genai>=1.26.0",

    # From imbue_tools
    "async_lru",
    "libcst",
]

[project.urls]
Homepage = "https://github.com/imbue-ai/vet"
Repository = "https://github.com/imbue-ai/vet"
Issues = "https://github.com/imbue-ai/vet/issues"

[project.scripts]
vet = "vet.cli.main:main"

[tool.setuptools]
package-data.vet = ["py.typed"]

[tool.setuptools.packages.find]
include = ["vet*"]

[dependency-groups]
dev = [
    "black",
    "isort",
    "pytest",
    "syrupy",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
case_sensitive = true
order_by_type = false
known_first_party = ["vet"]
no_lines_before = ["future"]
